# Uranian-Astrology

./: .gitattributes  .gitignore  API_REFERENCE.md  Cargo.toml  DIAL_DESIGN.md  DIAL_IMPLEMENTATION.md  IMPLEMENTATION_UPDATE.md  PROJECT_STATUS.md  README.md  demo_dial.sh  justfile  run_dial.sh  shell.nix
src/: app.rs  main.rs  main.rs.original
src/astrology/: angle.rs  constants.rs  harmonics.rs  mod.rs
src/ui/: controls.rs  dial.rs  mod.rs
src/utils/: math.rs  mod.rs
